@@ -54,6 +54,7 @@ directives = {
       'unicode': 'unicode',
       'class': 'class',
       'role': 'role',
+      'default-role': 'default-role',
       'contents': 'contents',
       'sectnum': 'sectnum',
       'section-numbering': 'sectnum',
